HRU-6392 Issue Fixed for Footer flickering in Safari.

--- a/web-app/css/common-controls.css
+++ b/web-app/css/common-controls.css
@@ -986,6 +986,10 @@ div[id=mainMenuContainer] .navList .parent:focus span {
     font-size: 0.750em;
 }
 
+.fade {
+    opacity:0;
+}
+
 /* Mobile screens*/
 @media only screen and (max-width: 767px) {
     .banner-footer-hide {
